<resources>
    <string name="app_name">DAVAC Security</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="tu_seguridad_es_nuestra_prioridad">Tu seguridad es nuestra prioridad.</string>
    <string name="verifique_su_token">Verifique su Token</string>
    <string name="inserte_su_token">inserte su Token</string>
    <string name="temperatura">Temperatura y humedad</string>
    <string name="gas">Sensor de Gas</string>
    <string name="id">ID</string>
    <string name="sensor_impacto">Sensor de Impacto</string>
    <string name="_30">30%</string>
    <string name="prompt_empresa">Empresa</string>
    <string name="cerrar">Abrir navegador de busqueda</string>
    <string name="abrir">Cerrar navegador de busqueda</string>
</resources>