<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sensor_gas"
    tools:context=".sensor_gas">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >




    <!--Menu-->
    <LinearLayout
        android:id="@+id/linearMenu"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/amarillo_pollito"
        android:gravity="top"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imagMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/menu" />
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutRectangle2"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/amarillo_pollito"
        android:background="@drawable/rectangle_2"
        android:layout_below="@id/linearMenu"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/Gas_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:text="@string/id"
            android:textAppearance="@style/temperatura"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutRectangle3"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/amarillo_pollito"
        android:background="@drawable/rectangle_2"
        android:layout_below="@id/relativeLayoutRectangle2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/Gas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:text="@string/gas"
            android:textAppearance="@style/temperatura"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/medidor"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/medidor"
        android:layout_below="@id/relativeLayoutRectangle3"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/GasValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/medidor"
        android:textStyle="bold"
        android:textSize="90sp"
        android:gravity="center_horizontal|top"
        />



    <androidx.cardview.widget.CardView
        android:id="@+id/alerta"
        android:layout_width="265dp"
        android:layout_height="100dp"
        android:layout_below="@id/GasValue"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/amarillo_pollito"/>

    <!-- btnGraph ImageView -->
    <ImageView
        android:id="@+id/btnGraph"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dataanalysis"
        android:layout_below="@id/alerta"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>