<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Sensor_impacto"
    tools:context=".Sensor_impacto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <!--Menu-->
    <LinearLayout
        android:id="@+id/linearMenu"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/amarillo_pollito"
        android:gravity="top"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imagMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/menu" />
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutRectangle2"
            android:layout_width="174dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/amarillo_pollito"
            android:background="@drawable/rectangle_2"
            android:layout_below="@id/linearMenu"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/Gas_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:text="@string/id"
                android:textAppearance="@style/temperatura"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutRectangle3"
            android:layout_width="174dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/amarillo_pollito"
            android:background="@drawable/rectangle_2"
            android:layout_below="@id/relativeLayoutRectangle2"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/Gas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:text="@string/sensor_impacto"
                android:textAppearance="@style/temperatura"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>

    <!--cardview que manda una alerta cuando hay un impacto-->
    <androidx.cardview.widget.CardView
        android:id="@+id/alerta"
        android:layout_width="265dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/amarillo_pollito"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_below="@id/imageView"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/alerta_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="283dp"
        android:layout_height="245dp"
        android:layout_below="@id/relativeLayoutRectangle3"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/impacto" />

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"/>

    </androidx.drawerlayout.widget.DrawerLayout>