<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Sensor_humedad"
    tools:context=".Sensor_humedad">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <!--Menu-->
    <LinearLayout
        android:id="@+id/linearMenu"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/amarillo_pollito"
        android:gravity="top"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imagMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/menu" />
        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

        <!-- FrameLayout rectangle_2 con TextView Gas_id -->
        <FrameLayout
            android:id="@+id/rectangle_2"
            android:layout_width="174dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/amarillo_pollito"
            android:background="@drawable/rectangle_2"
            android:layout_below="@+id/linearMenu"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/Gas_id"
                android:layout_width="155dp"
                android:layout_height="21dp"
                android:gravity="center"
                android:text="@string/id"
                android:textAppearance="@style/temperatura"/>
        </FrameLayout>

        <!-- FrameLayout rectangle_3 con TextView temperatura -->
        <FrameLayout
            android:id="@+id/rectangle_3"
            android:layout_width="174dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/amarillo_pollito"
            android:background="@drawable/rectangle_2"
            android:layout_below="@+id/rectangle_2"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/temperatura"
                android:layout_width="155dp"
                android:layout_height="21dp"
                android:gravity="center"
                android:text="@string/temperatura"
                android:textAppearance="@style/temperatura"/>
        </FrameLayout>


        <View
            android:id="@+id/circleView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@drawable/circle_background"
            android:layout_centerInParent="true"/>

        <!-- ImageView centrado -->
        <ImageView
            android:id="@+id/image_term"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:src="@drawable/termometro"
            android:layout_centerInParent="true"/>

        <!-- TextViews centrados -->
        <TextView
            android:id="@+id/humedar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="--%"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/image_term"
            android:layout_alignTop="@+id/image_term"/>

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="--C°"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@+id/humedar"
            android:layout_alignStart="@+id/humedar"/>

    <!--cardview que se usa cuando se llega a un parametro de temperatura
    y humedad
    -->
        <androidx.cardview.widget.CardView
            android:id="@+id/alerta"
            android:layout_width="265dp"
            android:layout_height="100dp"
            app:cardBackgroundColor="@color/amarillo_pollito"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>


</RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>